# ddns-letsencrypt-tool

./: Cargo.toml  README.md  config.yml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  dist-notes.md  dist.yml
data/: config.yml  ddns-letsencrypt-tool.service
src/: address_monitor.rs  certstore.rs  dnsupdate.rs  main.rs
