[package]
name = "ddns-letsencrypt-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.66"
clap = { version = "4.1.8", features = ["derive"] }
domain = { version = "0.7.2", features = ["serde", "tsig", "resolv", "tokio"] }
futures = "0.3.27"
instant-acme = "0.1.3"
ipnetwork = "0.20.0"
netlink-packet-core = "0.5.0"
netlink-packet-route = "0.15.0"
netlink-sys = "0.8.5"
rcgen = "0.10.0"
rtnetlink = "0.12.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_with = { version = "2.3.1", features = ["base64"] }
serde_yaml = "0.9.19"
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
x509-parser = "0.14.0"
