[package]
name = "ddns-letsencrypt-tool"
version = "0.1.1"
edition = "2021"
authors = ["Sjoerd Simons <sjoerd@luon.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A simple rust tool that combines an RFC2136 dynamic dns updates client with an acme client supporting the dns01 challenge protocol."
repository = "https://github.com/sjoerdsimons/ddns-letsencrypt-tool"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.66"
clap = { version = "4.1.8", features = ["derive"] }
domain = { version = "0.11.0", features = ["serde", "tsig", "resolv", "tokio"] }
futures = "0.3.27"
instant-acme = "0.7.1"
ipnetwork = "0.21.1"
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.24"
netlink-sys = "0.8.5"
rcgen = "0.14"
rtnetlink = "0.17.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_with = { version = "3.4", features = ["base64"] }
serde_yaml = "0.9.19"
thiserror = "2.0.3"
tokio = { version = "1.43.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.20"
x509-parser = "0.18"
